--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<section>
 		<p>
 			This game is inspired by <strong class="important-color">"Brain Training Logic Puzzle"</strong><br>
-			by <strong class="important-color">CL-Games</strong>. You can free download it from the Play Store<br>
+			by <strong class="important-color">CL-Games</strong>. You can freely download it from the Play Store<br>
 			and play a lot of addictive puzzles in one game.
 		</p>
 		
