--- a/ingame.html
+++ b/ingame.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -39,6 +39,5 @@
 	</footer>
 
 	<script type="text/javascript" src="code.js"></script>
-	<!-- <footer><a href="https://www.flaticon.com/authors/vectors-market" title="icons">Icons created by Vectors Market - Flaticon</a></footer> -->
 </body>
 </html>
